# traditional-rag-pipeline

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
notebooks/: document.ipynb  pdf_load.ipynb
